--- a/views/add-new-article.ejs
+++ b/views/add-new-article.ejs
@@ -14,7 +14,9 @@
 
   <body id="body">
     <header class="myheader">
-      <h1>Courses4Arab</h1>
+      <h1>
+        <a style="all: unset" href="/">Courses4Arab</a>
+      </h1>
 
       <nav>
         <ul class="parent">
@@ -23,7 +25,7 @@
               AaaLL Courses
             </a>
           </li>
-          <li><a href="/add-new-article"> Add new article </a></li>
+          <li><a href="/new-article"> Add new article </a></li>
           <li id="dark" class="mode">change mode</li>
           <li><a href=""> Support Us </a></li>
         </ul>
@@ -32,39 +34,20 @@
 
     <main id="main">
       <section>
-        <h1>Trending Articles &#128293;</h1>
+        <h1>Create new article</h1>
 
-        <div class="parent-of-articles">
-          <article>
-            <h2>Learn HTML</h2>
+        <form>
+          <label for="title">Article title: </label>
+          <input id="title" type="text" />
 
-            <p>
-              HTML is the standard markup language for Web pages...
+          <label for="summary">Article summary: </label>
+          <input id="summary" type="text" />
 
-              <a class="btn" href="/dddddd">show more</a>
-            </p>
-          </article>
+          <label for="body">Article body:</label>
+          <textarea id="body"></textarea>
 
-          <article>
-            <h2>Learn HTML</h2>
-
-            <p>
-              HTML is the standard markup language for Web pages...
-
-              <a class="btn" href="/dddddd">show more</a>
-            </p>
-          </article>
-
-          <article>
-            <h2>Learn HTML</h2>
-
-            <p>
-              HTML is the standard markup language for Web pages...
-
-              <a class="btn" href="/dddddd">show more</a>
-            </p>
-          </article>
-        </div>
+          <button class="create">create</button>
+        </form>
       </section>
     </main>
 
