--- a/views/add-new-article.ejs
+++ b/views/add-new-article.ejs
@@ -15,7 +15,7 @@
   <body id="body">
     <header class="myheader">
       <h1>
-        <a style="all: unset;cursor: pointer;" href="/">Courses4Arab</a>
+        <a style="all: unset; cursor: pointer" href="/">Courses4Arab</a>
       </h1>
 
       <nav>
@@ -36,17 +36,17 @@
       <section>
         <h1>Create new article</h1>
 
-        <form>
-          <label for="title">Article title: </label>
-          <input id="title" type="text" />
+        <form action="/all-articles" method="POST">
+          <label for="title">Article title:</label>
+          <input type="text" id="title" name="title" required />
 
-          <label for="summary">Article summary: </label>
-          <input id="summary" type="text" />
+          <label for="summary">Article summary:</label>
+          <input type="text" id="summary" name="summary" required />
 
           <label for="body">Article body:</label>
-          <textarea id="body"></textarea>
+          <textarea id="body" name="body" required></textarea>
 
-          <button class="create">create</button>
+          <button class="create">Create</button>
         </form>
       </section>
     </main>
