--- a/views/add-new-article.ejs
+++ b/views/add-new-article.ejs
@@ -1,64 +1,22 @@
-<!DOCTYPE html>
+<%- include("./partials/head.ejs"); %> <%- include("./partials/header.ejs"); %>
 
-<html lang="ar">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>learn css in 1hr</title>
+<main id="main">
+  <section>
+    <h1>Create new article</h1>
 
-    <link rel="stylesheet" href="styles.css" />
+    <form action="/all-articles" method="POST">
+      <label for="title">Article title:</label>
+      <input type="text" id="title" name="title" required />
 
-    <script defer src="main.js"></script>
-  </head>
+      <label for="summary">Article summary:</label>
+      <input type="text" id="summary" name="summary" required />
 
-  <body id="body">
-    <header class="myheader">
-      <h1>
-        <a style="all: unset; cursor: pointer" href="/">Courses4Arab</a>
-      </h1>
+      <label for="body">Article body:</label>
+      <textarea id="body" name="body" required></textarea>
 
-      <nav>
-        <ul class="parent">
-          <li>
-            <a href="https://courses4arab.com/#available-courses">
-              AaaLL Courses
-            </a>
-          </li>
-          <li><a href="/add-new-article"> Add new article </a></li>
-          <li id="dark" class="mode">change mode</li>
-          <li><a href=""> Support Us </a></li>
-        </ul>
-      </nav>
-    </header>
+      <button class="create">Create</button>
+    </form>
+  </section>
+</main>
 
-    <main id="main">
-      <section>
-        <h1>Create new article</h1>
-
-        <form action="/all-articles" method="POST">
-          <label for="title">Article title:</label>
-          <input type="text" id="title" name="title" required />
-
-          <label for="summary">Article summary:</label>
-          <input type="text" id="summary" name="summary" required />
-
-          <label for="body">Article body:</label>
-          <textarea id="body" name="body" required></textarea>
-
-          <button class="create">Create</button>
-        </form>
-      </section>
-    </main>
-
-    <footer>
-      <p class="follow">
-        يُمكنك متابعة اخر أخبار الموقع و القناة علي
-
-        <a href=""> الفيسبوك </a>
-      </p>
-
-      <p class="design">Designed and developed by Ali Hassan © 2020</p>
-    </footer>
-  </body>
-</html>
+<%- include("./partials/footer.ejs"); %>
