--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,81 +1,28 @@
-<!DOCTYPE html>
+<%- include("./partials/head.ejs"); %> <%- include("./partials/header.ejs"); %>
+<% const andro = "is my name" %>
 
-<html lang="ar">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>project-node-js</title>
+<h1><%= andro %></h1>
 
-    <link rel="stylesheet" href="styles.css" />
+<br /><br />
+<main id="main">
+  <section>
+    <h1 lang="en" dir="ltr" id="maintitle" data-article="hiiiiiiiiii♥">Trending Articles &#128293;</h1>
 
-    <script defer src="main.js"></script>
-  </head>
+    <div class="parent-of-articles">
+      <% arrArticle.forEach(item=> { %>
 
-  <body id="body">
-    <header class="myheader">
-      <h1>Courses4Arab</h1>
+      <article>
+        <h2><%= item.title %></h2>
 
-      <nav>
-        <ul class="parent">
-          <li>
-            <a href="https://courses4arab.com/#available-courses">
-              AaaLL Courses
-            </a>
-          </li>
-          <li><a href="/add-new-article"> Add new article </a></li>
-          <li id="dark" class="mode">change mode</li>
-          <li><a href=""> Support Us </a></li>
-        </ul>
-      </nav>
-    </header>
+        <p>
+          <%= item.summary %>
+          <a class="btn" href="/all-articles/<%= item._id %>">show more</a>
+        </p>
+      </article>
 
-    <main id="main">
-      <section>
-        <h1>Trending Articles &#128293;</h1>
+      <% }); %>
+    </div>
+  </section>
+</main>
 
-        <div class="parent-of-articles">
-          <article>
-            <h2>Learn HTML</h2>
-
-            <p>
-              HTML is the standard markup language for Web pages...
-
-              <a class="btn" href="/dddddd">show more</a>
-            </p>
-          </article>
-
-          <article>
-            <h2>Learn HTML</h2>
-
-            <p>
-              HTML is the standard markup language for Web pages...
-
-              <a class="btn" href="/dddddd">show more</a>
-            </p>
-          </article>
-
-          <article>
-            <h2>Learn HTML</h2>
-
-            <p>
-              HTML is the standard markup language for Web pages...
-
-              <a class="btn" href="/dddddd">show more</a>
-            </p>
-          </article>
-        </div>
-      </section>
-    </main>
-
-    <footer>
-      <p class="follow">
-        يُمكنك متابعة اخر أخبار الموقع و القناة علي
-
-        <a href=""> الفيسبوك </a>
-      </p>
-
-      <p class="design">Designed and developed by Ali Hassan © 2020</p>
-    </footer>
-  </body>
-</html>
+<%- include("./partials/footer.ejs"); %>
