--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/styles.css" />
 
     <script defer src="/main.js"></script>
+    <script defer src="/deleteRequest.js"></script>
   </head>
 </html>
 
